--- a/telegraf.conf
+++ b/telegraf.conf
@@ -1,8 +1,15 @@
 [[inputs.tail]]
   files = ["/aethir-node-log/server.log"]
-  from_beginning = true
+  from_beginning = false
   data_format = "grok"
   grok_patterns = ['^\[%{TIMESTAMP_ISO8601:timestamp}\] \[%{NUMBER}\] \[%{WORD:level:tag} *] %{GREEDYDATA:message}']
+
+[[inputs.procstat]]
+  pattern = "CheckerService"
+  properties = ["cpu", "limits", "memory", "mmap"]
+
+[[inputs.net]]
+  interfaces = ["*"]
 
 [[processors.defaults]]
   [processors.defaults.fields]
